# nbstager

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish_pypi.yml
docs/: index.html
examples/: launch.json
nbstager/: __init__.py  handlers.py
nbstager/etc/jupyter_notebook_config.d/: nbstager.json
nbstager/etc/jupyter_server_config.d/: nbstager.json
scripts/: build-url.py  example_def.json  url_helper.py
