[build-system]
requires = [
  "setuptools>=64", 
  "wheel", 
  "build",
  "jupyter-packaging>=0.10"]

build-backend = "setuptools.build_meta"

[project]
name = "nbstager"
version = "0.1.0"
description = "Jupyter Server extension for staging notebook workspaces from repositories, parameters, and data URLs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Reggie Cushing" }
]

[project.urls]
Homepage = "https://github.com/recap/nbstager"
Repository = "https://github.com/recap/nbstager"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nbstager*"]
